--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "local": "cp src/settings/const.dev src/module/common/const.ts;npx webpack; node server.js",
+    "local": "cp src/settings/const.prd src/module/common/const.ts;npx webpack; node server.js",
     "dev": "cp src/settings/const.dev src/module/common/const.ts;npx webpack; node server.js",
     "stg": "cp src/settings/const.stg src/module/common/const.ts;npx webpack; scp -r ./public/* bonsoleil:web/bon-soleil.com/stgdao/; scp ./public/.htaccess bonsoleil:web/bon-soleil.com/stgdao/",
     "prd": "cp src/settings/const.prd src/module/common/const.ts;npx webpack; scp -r ./public/* bonsoleil:web/bon-soleil.com/dao/; scp ./public/.htaccess bonsoleil:web/bon-soleil.com/dao/; cp src/settings/const.stg src/module/common/const.ts;npx webpack; scp -r ./public/* bonsoleil:web/bon-soleil.com/stgdao/; scp ./public/.htaccess bonsoleil:web/bon-soleil.com/stgdao/",
