--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "crypt-js": "^1.0.4",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.12.1",
     "express": "^4.19.2",
