--- a/src/settings/const.sample
+++ b/src/settings/const.sample
@@ -1,14 +1,15 @@
 export const CONST = {
-  HEADER_TITLE: "STG BizenDAO",
+  HEADER_TITLE: "sample spa",
   RPC_URL: "https://v1.bon-soleil.com:8080/",
   BC_NETWORK_NAME: "PRIVATE",
   BC_NETWORK_ID: "21201",
-  MANAGER_CA: "0x7B3cBc2C68b68ABbDc0f0adC62E0FA7f27c26243",
-  MEMBERSCARD_CA: "0xb68F8CEB90752e09fa7c1CEf4c0bF83CB045AdA8",
+  MANAGER_CA: "0x99E41De8365307aFcABD5Aa9cb2853Ca4847D575",
+  MEMBERSCARD_CA: "0xA1cf7922819d56EC28c75C66ACD9e6BbfC27037f",
   TBA_SALT: "1",
   DEFAULT_SYMBOL: "bizen",
   ARTICLE_REPO: "https://article.bizen.sbs/",
   ARTICLE_REPO_URL: "https://article.bizen.sbs/bizen-article/md/",
   BOT_API_URL: "https://ehfm6q914a.execute-api.ap-northeast-1.amazonaws.com/",
-  AKORD_API_URL: "https://permaweb.bon-soleil.com/api/akord/"
+  AKORD_API_URL: "https://permaweb.bon-soleil.com/api/akord/",
+  CRYPTO_SECRET:"crypto_secret_seed",
 };
