--- a/src/settings/const.sample
+++ b/src/settings/const.sample
@@ -1,15 +1,15 @@
 export const CONST = {
-  HEADER_TITLE: "sample spa",
-  RPC_URL: "https://v1.bon-soleil.com:8080/",
-  BC_NETWORK_NAME: "PRIVATE",
-  BC_NETWORK_ID: "21201",
-  MANAGER_CA: "0x99E41De8365307aFcABD5Aa9cb2853Ca4847D575",
-  MEMBERSCARD_CA: "0xA1cf7922819d56EC28c75C66ACD9e6BbfC27037f",
+  HEADER_TITLE: "BizenDAO",
+  RPC_URL: "https://polygon-rpc.com",
+  BC_NETWORK_NAME: "POLYGON",
+  BC_NETWORK_ID: "137",
+  MANAGER_CA: "0x39615ac8f231D0099114eaC3095431e210C8f654",
+  MEMBERSCARD_CA: "0x574e01d64205aF4B7Fe4C1A91287ABe1Afcd68CF",
   TBA_SALT: "1",
-  DEFAULT_SYMBOL: "bizen",
+  DEFAULT_SYMBOL: "POL",
   ARTICLE_REPO: "https://article.bizen.sbs/",
   ARTICLE_REPO_URL: "https://article.bizen.sbs/bizen-article/md/",
   BOT_API_URL: "https://ehfm6q914a.execute-api.ap-northeast-1.amazonaws.com/",
   AKORD_API_URL: "https://permaweb.bon-soleil.com/api/akord/",
-  CRYPTO_SECRET:"crypto_secret_seed",
+  CRYPTO_SECRET:"ehfm6q914a.execute",
 };
