--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "local": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; node server.js",
-    "dev": "cp src/settings/front_dev.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; node server.js",
-    "stg": "cp src/settings/front_stg.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/stg; scp ./public/.htaccess bizendao:web/stg/",
-    "biz": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/bizen/; scp ./public/.htaccess bizendao:web/bizen/",
-    "flow": "cp src/settings/front_flow.cnf src/module/common/const.ts; cp src/settings/creator_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bonsoleil:web/flow/www/; scp ./public/.htaccess bonsoleil:web/flow/www/",
-    "prd": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/bizen/; scp ./public/.htaccess bizendao:web/bizen/",
-    "s3": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; aws s3 sync ./public s3://bizendao"
+    "flow": "sh deploy/build.sh flow",
+    "local": "sh deploy/build.sh local",
+    "dev": "sh deploy/build.sh dev",
+    "stg": "sh deploy/build.sh stg",
+    "prd": "sh deploy/build.sh prd",
+    "local_old": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; node server.js",
+    "dev_old": "cp src/settings/front_dev.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; node server.js",
+    "stg_old": "cp src/settings/front_stg.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/stg; scp ./public/.htaccess bizendao:web/stg/",
+    "prd_old": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/bizen/; scp ./public/.htaccess bizendao:web/bizen/",
+    "biz_old": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bizendao:web/bizen/; scp ./public/.htaccess bizendao:web/bizen/",
+    "flow_bk_old": "cp src/settings/front_flow.cnf src/module/common/const.ts; cp src/settings/creator_genre.cnf src/module/common/genrelist.ts; npx webpack; scp -r ./public/* bonsoleil:web/flow/www/; scp ./public/.htaccess bonsoleil:web/flow/www/",
+    "s3_old": "cp src/settings/front_prd.cnf src/module/common/const.ts; cp src/settings/potter_genre.cnf src/module/common/genrelist.ts; npx webpack; aws s3 sync ./public s3://bizendao"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +30,6 @@
   "dependencies": {
     "crypt-js": "^1.0.4",
     "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
     "ethers": "^6.12.1",
     "express": "^4.19.2",
     "marked": "^12.0.2"
